# serverless_llm_experiment_retry14_baseline

./: .gitignore  EXPERIMENT_GUIDE.md  PROJECT_STRUCTURE.md  README.md  pyproject.toml  sitecustomize.py
Punica_project/: README.md  repo
S-LoRA_project/: README.md  repo
S-LoRA_project/docs/: SLoRA_REPRO_PLAN.md
S-LoRA_project/scripts/: README.md  run_slora_fair_experiment.sh
SGLang_project/: README.md  repo
SGLang_project/configs/: README.md
SGLang_project/docs/: FAIR_COMPARISON_EXECUTION_PLAN.md
SGLang_project/scripts/: README.md  (+3 more)
ServerlessLLM_project/: README.md  repo
configs/: datasets.yaml  default.yaml  experiments.yaml  lora_evolution_example.yaml  production.yaml
docs/: BASELINE_MATRIX.md  CODEX_INTERACTION_RULES.md  DOCUMENTATION_INDEX.md  DYNAMIC_SCALING_THRESHOLDS_DESIGN.md  ENVIRONMENT.md  FAIR_COMPARISON_EXECUTION_PLAN.md  GITHUB_SYNC.md  GROUP_MEETING_REPORT_2026-04-07.md  PROJECT_PROGRESS.md  Punica_REPRO_PLAN.md  Punica_REPRO_SCOPE.md  RELATED_WORK_AND_OPTIMIZATION_SURVEY_2026-03-29.md  REPRO_PLAN.md  ROOT_CAUSE_ANALYSIS.md  SESSION_HANDOFF_2026-03-13.md  SYSTEM_REPRODUCTION_RULES.md  ServerlessLLM_REPRO_SCOPE.md  TECHNICAL_ROUTE_AND_IMPLEMENTATION.md  TODO_CONSISTENCY_ALIGN_INTRO.md  TODO_CONSISTENCY_FINAL_SCAN.md  TODO_CONSISTENCY_RESCAN.md  TODO_CONSISTENCY_SCAN_LATEST.md  TODO_DYNAMIC_SCALING.md  TODO_SERVERLESS_LEVEL.md  UPSTREAM_REPO_STATE.md  VLLM_RTX3090_LORA.md  对比实验日志.md
docs copy/: ENVIRONMENT.md  GITHUB_SYNC.md  GROUP_MEETING_REPORT_2026-04-07.md  PROJECT_PROGRESS.md  RELATED_WORK_AND_OPTIMIZATION_SURVEY_2026-03-29.md  SESSION_HANDOFF_2026-03-13.md  TECHNICAL_ROUTE_AND_IMPLEMENTATION.md  VLLM_RTX3090_LORA.md
environments/: Punica.md  S-LoRA.md  ServerlessLLM.md  SkyServe.md
faaslora/: __init__.py  cli.py
patches/: ServerlessLLM_local_changes.patch
scripts/: audit_e2e_v2_round.py  audit_e2e_v3_round.py  build_sanitized_frozen_pools.py  check_env.py  clone_official_repos.sh  compare_completed_fair_round.sh  compare_completed_fair_rounds.sh  compare_fair_results.py  dedicated_engine_worker.py  deploy_serverlessllm_model.sh  download_3b_model.sh  download_datasets.py  download_model.py  export_latency_phase_breakdown.py  export_shared_faaslora_trace.py  generate_lora_adapters.py  generate_serverlessllm_deploy_config.py  install_compilers_conda.sh  materialize_punica_loras.py  materialize_serverlessllm_loras.py  prepare_publicmix_pool.py  prepare_repaired_shared_round.sh  prepare_sanitized_shared_round.sh  prepare_shared_round_artifacts.sh  probe_vllm_lora_runtime.py  query_serverlessllm_chat.sh  reinstall_env.sh  reinstall_gpu_env.sh  repair_shared_adapter_subset.py  replay_openai_trace.py  replay_punica_trace.py  resume_fair_round_tmux.sh  run_all_experiments.py  run_all_experiments_user_scope.sh  run_cold_start_subprocess.py  run_faaslora_shared_artifact_experiment.sh  run_faaslora_subprocess.py  run_full_fair_round.sh  run_joint_fair_comparison.sh  run_paper_long_experiment_queue.sh  (+25 more)
tests/: __init__.py  benchmark.py  test_basic_smoke.py  test_integration.py
vLLM_project/: README.md
(+61 files in other folders)
